# Meal-Generator

./: .gitignore  README.md  carb.json  components.py  extra.json  main.py  meal.json  pyproject.toml  salad.json  soup.json
folder_path/: carb.json  protein.json  salad.json  soup.json
